<resources>
    <string name="app_name">Login MVVM App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="button_register">Sign Up</string>
    <string name="button_login">Login</string>
    <string name="signup_text">Create New Account</string>
    <string name="alredy_have_an_account">Alredy have an account? <font color="#2651bd">Login</font></string>
    <string name="dont_have_an_acccount">Don\'t have an account? <font color="#2651bd">Sign Up</font></string>
    <string name="sign_in_text">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_try_again">Try again</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="splash_screen_text">Login MVVM</string>
</resources>